cmake_minimum_required(VERSION 3.13)
set(PICO_SDK_PATH "$ENV{PICO_SDK_PATH}")
include(pico_sdk_import.cmake)
project(my_project)
pico_sdk_init()
add_executable(my_project main.c)
target_link_libraries(my_project pico_stdlib)
pico_enable_stdio_usb(my_project 1)
pico_enable_stdio_uart(my_project 0)
pico_add_extra_outputs(my_project)